--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,13 +23,11 @@ spring:
   h2.console.enabled: false
   sql.init.mode: always
 
----
-spring:
-  config:
-    activate:
-      on-profile: testdb
-  datasource:
-    url: jdbc:h2:mem:board;mode=mysql
-    driver-class-name: org.h2.Driver
-  sql.init.mode: always
-  test.database.replace: none
+#---
+#spring:
+#  config.activate.on-profile: testdb
+#  datasource:
+#    url: jdbc:h2:mem:board;mode=mysql
+#    driverClassName: org.h2.Driver
+#  sql.init.mode: always
+#  test.database.replace: none
